# LiveDebR

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  Readme.md  build_builder.sh  clean.sh  config.json  release.md
.github/workflows/: ci.yml  test.yml
debr/: bash.rs  config.json  config_utils.rs  lb.rs  main.rs  post_cfg.rs
debr/assets/: apply_gnome_settings.service  install_deps.sh  lb_config.sh  non_free.list.chroot  snapd_installer.service  with_snapd.sh
debr/assets/modules/: chrome.json  dev.json  gnome.json  socials.json  vsc.json
debr/assets/non_free_list/: bookworm.non_free.list.chroot
debr/post_cfg/: cfg_parser.rs  deboot_opt.rs  hooks.rs  json_cfg.rs  sign.rs  snap.rs
docs/: Modules.md  Readme.md
keyringer/: Readme.md  main.rs  ringer.rs  systemctl.rs
keyringer/assets/: keyringer.service  keyringer.timer
src/: main.rs
